[package]
name = "media-toolkit"
version = "0.1.0"
authors = ["Shady Khalifa <shekohex@gmail.com>"]
edition = "2018"

[lib]
name = "media_toolkit"
# this value will change depending on the target os
# for iOS it would be `staticlib`
# for android it would be `c-dylib`
crate-type = ["cdylib", "staticlib"]

[dependencies]
blurhash = "0.1"
image = { version = "0.23", default-features = false, features = ["jpeg", "png", "webp"] }

[build-dependencies]
cbindgen = "0.15"
